test/errors/expecting_primary.dm
a be +

--- Output
Unexpected character

1| a be +
        ^

---
